try to fix select on mobile

--- a/src/scss/components/SendFormComponents/StepForm/select.scss
+++ b/src/scss/components/SendFormComponents/StepForm/select.scss
@@ -64,7 +64,7 @@
     background-color: transparent;
     appearance: none;
     cursor: pointer;
-    overflow: auto;
+    overflow: visible;
     @media (max-width: 1000px) {
       top: 24%;
       left: 314px;
